--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
+asgiref==3.3.1
+certifi==2020.12.5
+cloudinary==1.24.0
+dj-database-url==0.5.0
 Django==1.11
+django-bootstrap3==14.2.0
+django-heroku==0.3.1
+importlib-metadata==1.7.0
+Pillow==8.1.0
+psycopg2==2.8.6
 pytz==2020.5
+six==1.15.0
+sqlparse==0.4.1
+urllib3==1.26.2
+whitenoise==5.2.0
+zipp==3.4.0
