--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ dj-database-url==0.5.0
 Django==1.11
 django-bootstrap3==14.2.0
 django-heroku==0.3.1
+gunicorn==20.0.4
 importlib-metadata==1.7.0
 Pillow==8.1.0
 psycopg2==2.8.6
+python-decouple==3.4
 pytz==2020.5
 six==1.15.0
 sqlparse==0.4.1
